--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('libs/baidumapapi.jar')
     compile files('libs/jsoup-1.7.2.jar')
+    compile files('libs/BaiduLBS_Android.jar')
+    compile files('libs/baidumapapi_v2_4_1.jar')
 }
